# llm-evals-platform

./: .env.example  .gitignore  Makefile  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1e7ce805d7ea_add_active_version.py  20260201_0205_init_prompt_registry.py  20260221_0200_add_runs_table.py  20260223_0200_add_prompt_tags.py
backend/app/: main.py  settings.py  worker.py
backend/app/api/: prompts.py  runs.py  tags.py
backend/app/models/: __init__.py  prompt.py  run.py  tag.py
backend/app/schemas/: prompt.py  run.py  tag.py
backend/llm_evals_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_prompts_api.py  test_runs_api.py  test_tags_api.py  test_worker.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  SECURITY.md
docs/diagrams/: runtime.mmd
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/prompts/: page.tsx
frontend/app/prompts/[id]/: page.tsx
frontend/app/prompts/[promptId]/: DeletePromptButton.tsx  NewVersionForm.tsx  page.tsx
frontend/app/prompts/new/: page.tsx  ui.tsx
frontend/app/runs/: page.tsx
frontend/app/runs/[id]/: page.tsx
frontend/app/runs/new/: page.tsx  ui.tsx
frontend/components/: PromptDetailClient.tsx  PromptForm.tsx
frontend/lib/: api.ts  promptsApi.ts  runsApi.ts  tagsApi.ts  types.ts
infra/: .env.example  docker-compose.yml
